--- a/about.qmd
+++ b/about.qmd
@@ -1,6 +1,6 @@
 ---
 title: "About Me"
-image: profile.jpg
+image: assets/profile.png
 about:
   template: jolla
   links:
@@ -9,27 +9,33 @@ about:
       href: https://twitter.com
     - icon: linkedin
       text: LinkedIn
-      href: https://linkedin.com
+      href: https://www.linkedin.com/in/swadhin-mondal-12084713/
     - icon: github
       text: Github
       href: https://github.com/rbiswasfc
 ---
 
-Placeholder for now.
+Experienced economist with a PhD and 15+ years in academia, research, and policy analysis. Skilled in econometric modeling, forecasting, cost-benefit analysis, and causal inference. Authorized to work in the UK.
 
-## Interests
-* BRICS
-* Research
-* Policy
-* Geopolitics
-* Economics
-* AI
-* Machine Learning
+## Current Role
 
-## Experience
+**Associate Professor and Head of Department** | University of Nizwa, Sultanate of Oman  
+Oct 2021 - Present
 
-**Company Name** | Position
-2020 - Present
+Leading the Economics and Finance department, providing training and mentorship to aspiring entrepreneurs, and conducting workshops on advanced data analysis techniques.
 
-**Previous Company** | Position
-2018 - 2020
+## Previous Experience
+
+**Economic Advisor** | Infinite Sum Modelling (Part-time, Remote)  
+Feb 2024 - Present
+
+**Assistant Professor** | Institute for Studies for Industrial Development (ISID), New Delhi  
+May 2013 - Aug 2017
+
+## Education
+
+**Ph.D in Economics** | Vidyasagar University  
+Health Care Financing and Equity (2007-2012)
+
+**M.Sc in Economics** | Vidyasagar University  
+Specialization in Econometrics and Statistics (2000-2002)
